--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="30dp">
+    android:padding="25dp">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                     android:text="Post"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    android:textColor="#000000"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -47,13 +47,39 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!-- 사진 -->
-            <ImageView
-                android:id="@+id/ivPhoto"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_marginTop="16dp"
-                android:layout_gravity="center"
-                android:background="@drawable/ic_add_photo"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/photoContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <ImageView
+                    android:id="@+id/ivPhoto1"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/ic_add_photo"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/ivPhoto2"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="16dp"
+                    android:visibility="gone"
+                    android:background="@drawable/ic_add_photo2"
+                    android:clipToOutline="true"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/ivPhoto1"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!-- 카테고리 -->
             <TextView
@@ -62,9 +88,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:text="Category"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -128,9 +154,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지역"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -148,7 +174,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:padding="8dp"/>
+                    android:padding="8dp"
+                    android:textSize="14sp"/>
 
                 <ImageView
                     android:id="@+id/btnAddRegion"
@@ -158,16 +185,28 @@
                     android:layout_gravity="center_vertical"/>
             </LinearLayout>
 
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/regionButtonContainer"
+<!--            <com.google.android.flexbox.FlexboxLayout-->
+<!--                android:id="@+id/regionButtonContainer"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/tvRegion"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                android:padding="10dp"-->
+<!--                app:flexWrap="wrap"-->
+<!--                app:justifyContent="flex_start"/>-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewRegions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@id/tvRegion"
                 app:layout_constraintStart_toStartOf="parent"
-                android:padding="10dp"
+                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                app:justifyContent="flex_start"
                 app:flexWrap="wrap"
-                app:justifyContent="flex_start"/>
+                app:flexDirection="row"/>
 
             <!-- 해시태그 -->
             <TextView
@@ -175,9 +214,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="해시태그"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toBottomOf="@id/categoryButtonContainer"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -195,7 +234,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:padding="8dp"/>
+                    android:padding="8dp"
+                    android:textSize="14sp"/>
 
                 <ImageView
                     android:id="@+id/btnAddHashtag"
@@ -205,16 +245,17 @@
                     android:layout_gravity="center_vertical"/>
             </LinearLayout>
 
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/hashtagButtonContainer"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewHashtags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/tvRegion"
+                app:layout_constraintTop_toBottomOf="@id/tvHashtag"
                 app:layout_constraintStart_toStartOf="parent"
-                android:padding="10dp"
+                app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
+                app:justifyContent="flex_start"
                 app:flexWrap="wrap"
-                app:justifyContent="flex_start"/>
+                app:flexDirection="row"/>
 
             <!-- 노래 -->
             <TextView
@@ -222,9 +263,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="노래"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"/>
 
@@ -234,6 +275,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:padding="8dp"
+                android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvSong"/>
@@ -243,9 +285,10 @@
             <EditText
                 android:id="@+id/etInfo"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:layout_marginTop="20dp"
                 android:padding="20dp"
+                android:textSize="12sp"
                 android:background="@drawable/style_info_background"
                 app:layout_constraintTop_toBottomOf="@id/etSong"
                 app:layout_constraintStart_toStartOf="parent"
@@ -257,9 +300,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="옷 정보"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toBottomOf="@id/etInfo"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -273,6 +316,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="40dp"
                 android:padding="12dp"
+                android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/tvClothes"/>
 
         </LinearLayout>
