--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -56,7 +56,8 @@
                 android:id="@+id/suggestionsRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
                 app:layout_constraintTop_toBottomOf="@id/searchBarLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
@@ -66,9 +67,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="인기 검색어"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginTop="16dp"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintTop_toBottomOf="@id/suggestionsRecyclerView"
                 app:layout_constraintStart_toStartOf="parent" />
@@ -77,7 +79,8 @@
                 android:id="@+id/popularSearchesRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="15dp"
                 app:layout_constraintTop_toBottomOf="@id/tvPopularSearches"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
