--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="10dp"
+    android:id="@+id/mypageFragment"
     android:orientation="vertical">
 
         <LinearLayout
@@ -55,61 +57,69 @@
                     android:orientation="horizontal"
                     android:gravity="center">
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="match_parent"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
                             android:id="@+id/story_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
                             android:text="30"
-                            android:textSize="25sp"/>
+                            android:textSize="20sp"/>
+
                         <TextView
                             android:id="@+id/story_string"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="게시글"
-                            android:textSize="18sp"/>
+                            android:textSize="15sp"/>
                     </LinearLayout>
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="match_parent"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
                             android:id="@+id/follower_btn"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
                             android:text="30"
-                            android:textSize="25sp"/>
+                            android:textSize="20sp"/>
                         <TextView
                             android:id="@+id/follower_string"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="팔로워"
-                            android:textSize="18sp"/>
+                            android:textSize="15sp"/>
                     </LinearLayout>
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="80dp"
                         android:layout_height="match_parent"
-                        android:padding="20dp"
+                        android:padding="10dp"
                         android:gravity="center"
                         android:orientation="vertical">
                         <TextView
                             android:id="@+id/following_btn"
                             android:layout_width="wrap_content"
+                            android:backgroundTint="@color/white"
+                            android:textColor="@color/black"
+                            android:textStyle="bold"
                             android:layout_height="wrap_content"
                             android:text="30"
-                            android:textSize="25sp"/>
+                            android:textSize="20sp"/>
                         <TextView
                             android:id="@+id/following_string"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="팔로잉"
-                            android:textSize="18sp"/>
+                            android:textSize="15sp"/>
                     </LinearLayout>
                 </LinearLayout>
 
