--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -1,12 +1,13 @@
-<!-- fragment_comments.xml -->
+<!-- fragment_following.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_comments"
+        android:id="@+id/recycler_story"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
