--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -1,100 +1,101 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="12dp">
 
     <LinearLayout
-        android:id="@+id/id_input_layout"
-        android:layout_width="270dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginStart="30dp"
-        android:paddingTop="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:gravity="center_vertical">
 
-
+        <ImageView
+            android:id="@+id/user_profile_image"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:background="@drawable/profile_circle_background"
+            android:layout_marginEnd="12dp" />
 
         <TextView
-            android:id="@+id/tv_comment_id"
+            android:id="@+id/comment_user_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="아이디"
-            android:textColor="@color/black"
-            style="@style/semibold12"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="USER1"
+            android:textStyle="bold" />
 
-
-        <ImageView
-            android:id="@+id/iv_comment_lock"
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/user_comment_text"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/iv_lock"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tv_comment_id"/>
-
-
-
+            android:text="댓글 내용입니다."
+            android:layout_marginLeft="5dp" />
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_button"
-        android:layout_width="60dp"
-        android:layout_height="24dp"
-        android:backgroundTint="@color/gray5"
-        android:layout_marginTop="10dp"
-        app:cardCornerRadius="10dp"
-        android:outlineProvider="none"
-        app:layout_constraintStart_toEndOf="@id/id_input_layout"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/iv_reply"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
-            android:src="@drawable/ic_reply"/>
-
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="30dp"
-            android:src="@drawable/iv_and" />
-
-
-        <ImageView
-            android:id="@+id/btn_etc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="40dp"
-            android:src="@drawable/ic_etc" />
-
-
-
-    </androidx.cardview.widget.CardView>
-
-
-
-    <TextView
-        android:id="@+id/tv_comment_contents"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="오사카 맛집 추천해 주실 수 있나요?"
-        android:paddingTop="10dp"
-        android:textColor="@color/black"
-        style="@style/regular12"
-        app:layout_constraintStart_toStartOf="@id/id_input_layout"
-        app:layout_constraintTop_toBottomOf="@id/id_input_layout"/>
+        android:orientation="vertical"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="9dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/my_profile_image"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:background="@drawable/profile_circle_background"
+                android:layout_marginEnd="12dp" />
+
+            <TextView
+                android:id="@+id/my_comment_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="USER2"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/my_comment_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="댓글 내용"
+                android:layout_marginLeft="5dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="8dp">
+
+            <TextView
+                android:id="@+id/comment_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="수정"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textColor="@color/black"
+                android:layout_marginStart="6dp"/>
+
+            <TextView
+                android:id="@+id/comment_delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="삭제"
+                android:textColor="@color/black"
+                android:layout_marginStart="6dp" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
+
