--- a/app/src/main/res/layout/item_post_comment.xml
+++ b/app/src/main/res/layout/item_post_comment.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:id="@+id/id_input_layout"
-        android:layout_width="270dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginStart="30dp"
@@ -49,6 +49,7 @@
         android:layout_width="60dp"
         android:layout_height="24dp"
         android:backgroundTint="@color/gray5"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         app:cardCornerRadius="10dp"
         android:outlineProvider="none"
