--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -134,17 +134,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:orientation="horizontal"
-                android:layout_marginTop="13dp">
+                android:layout_marginTop="13dp"
+                android:gravity="center">
 
                 <LinearLayout
                     android:id="@+id/scrapButton"
-                    android:layout_width="0dp"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_margin="5dp"
                     android:gravity="center"
-                    android:background="@drawable/border_background"
-                    android:layout_weight="1">
+                    android:background="@drawable/border_background">
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -152,21 +151,20 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:textStyle="bold"
                         android:gravity="center"
                         android:text="스크랩"/>
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/commentButton"
-                    android:layout_width="0dp"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_margin="5dp"
                     android:gravity="center"
                     android:background="@drawable/border_background"
-
-                    android:layout_weight="1">
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp">
+>
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -181,14 +179,12 @@
                 </LinearLayout>
                 <LinearLayout
                     android:id="@+id/profileEditButton"
-                    android:layout_width="0dp"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:layout_margin="5dp"
                     android:gravity="center"
                     android:background="@drawable/border_background"
-
-                    android:layout_weight="1">
+>
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
